--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,84 +1,91 @@
+/* Reset beberapa properti bawaan browser */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* Gaya umum untuk seluruh halaman */
 body {
-    margin: 0;
-    font-family: "Lucida Grande";
-  }
-  
-  a {
-    text-decoration: none;
-  }
-  
-  .container {
-    width: 1170px;
-    padding: 0 15px;
-    margin: 0 auto;
-    color: rgb(223, 144, 187);
-  }
+  margin: 0;
+  font-family: "Lucida Grande", sans-serif;
+  background-color: #ff99cc; /* Warna latar belakang pink */
+  color: white; /* Warna teks putih */
+}
 
-  .jalan {
-    font-size: 50px;
-    color: #f5f5f7;
-  }
+a {
+  text-decoration: none;
+}
 
-  
-  .top-wrapper {
-    padding: 180px 0 100px 0;
-    background-image: url(https://ak2.picdn.net/shutterstock/videos/10437272/thumb/3.jpg);
-    background-size: cover;
-    color: rgb(206, 118, 159);
-    text-align: center;
-  }
-  
-  .top-wrapper p {
-    opacity: 0.7;
-    margin-bottom: 0px;
-    font-size: 20px;
-    margin-top: 0px;
-    color: black;
-    font-family: 'Times New Roman', Times, serif;
-  }
-  
-  .btn-wrapper {
-    margin: 20px 0;
-  }
-  
-  .btn-wrapper p {
-    margin: 10px 0;
-  }
-  
-  
-  
-  .facebook {
-    background-color: #3b5998;
-    margin-right: 10px;
-  }
-  
-  .twitter {
-    background-color: #55acee;
-  }
-  
-  .btn {
-    padding: 12px 24px;
-    color: white;
-    display: inline-block;
-    opacity: 0.8;
-    border-radius: 4px;
-  }
-  
-  .btn:hover {
-    opacity: 1;
-  }
-  
-  .fa {
-    margin-right: 5px;
-  }
-  
-  header {
-    height: 65px;
-    width: 100%;
-    background-color: rgba(226, 136, 196, 0.9);
-  }
-  
-  .logo {
-    width: 124px;
-    margin-top: 20px;
-  }
+/* Gaya container utama */
+.container {
+  width: 1170px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+/* Gaya untuk teks berjalan (marquee) */
+.jalan {
+  font-size: 50px;
+  color: #f5f5f7; /* Warna teks pink */
+}
+
+/* Gaya untuk header */
+header {
+  height: 65px;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.9); /* Warna latar belakang hitam dengan transparansi */
+  border-top: 2px solid black; /* Bordir atas hitam */
+  border-bottom: 2px solid black; /* Bordir bawah hitam */
+}
+
+/* Gaya untuk top wrapper */
+.top-wrapper {
+  padding: 180px 0 100px 0;
+  background-image: url(https://ak2.picdn.net/shutterstock/videos/10437272/thumb/3.jpg);
+  background-size: cover;
+  text-align: center;
+}
+
+.top-wrapper p {
+  opacity: 0.7;
+  margin-bottom: 0px;
+  font-size: 20px;
+  margin-top: 0px;
+  font-family: 'Times New Roman', Times, serif;
+  color: black; /* Warna teks hitam */
+}
+
+/* Gaya untuk tombol-tombol */
+.btn-wrapper {
+  margin: 20px 0;
+}
+
+.btn-wrapper p {
+  margin: 10px 0;
+}
+
+.facebook {
+  background-color: #3b5998;
+  margin-right: 10px;
+}
+
+.twitter {
+  background-color: #55acee;
+}
+
+.btn {
+  padding: 12px 24px;
+  color: white;
+  display: inline-block;
+  opacity: 0.8;
+  border-radius: 4px;
+}
+
+.btn:hover {
+  opacity: 1;
+}
+
+.fa {
+  margin-right: 5px;
+}
