--- a/login/stylesheet.css
+++ b/login/stylesheet.css
@@ -8,7 +8,7 @@
 }
 
 :root {
-    --mainColor: #800080;
+    --mainColor: #89216b;
     --whiteColor: #ffffff;
     --titleColor: #D3D3D3;
     --labelColor: #333333;
