--- a/login/stylesheet.css
+++ b/login/stylesheet.css
@@ -236,6 +236,13 @@ form .form-group input:valid~i {
 .form-group input {
     border: 1px solid #000; /* Warna hitam (#000) */
 }
+.header {
+    background-color: #000; /* Ini adalah warna hitam */
+    /* Atau Anda juga bisa menggunakan kode warna lain untuk warna hitam */
+    color: #fff; /* Warna teks pada header (putih) */
+    /* Atau Anda juga bisa mengganti warna teks sesuai kebutuhan */
+}
+
 
 /* Contoh untuk elemen label dengan border hitam */
 .form-group label {
