--- a/stylesheet.css
+++ b/stylesheet.css
@@ -117,3 +117,21 @@ header {
     width: 48%; /* Lebar gambar 48% dari parent untuk menghindari overflow */
     margin-bottom: 10px; /* Spasi antara gambar */
 }
+.container {
+            margin: 20px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            background-color: #f9f9f9;
+            text-align: center;
+}
+
+        /* CSS untuk mengatur tampilan judul sebagai tautan */
+        .container a {
+            text-decoration: none; /* Menghapus garis bawah default pada tautan */
+            color: #007bff; /* Warna tautan (misalnya biru) */
+}
+
+        /* CSS untuk mengatur tampilan judul saat digulirkan */
+        .container a:hover {
+            text-decoration: underline; /* Menampilkan garis bawah saat digulirkan */
+}
